# shuttle-cch23

./: .gitignore  CHANGELOG.md  Cargo.toml  cog.toml
.github/workflows/: tests.yml
src/: main.rs  state.rs  tests.rs  types.rs  utils.rs
src/solutions/: day-1.rs  day-11.rs  day-12.rs  day-13.rs  day-14.rs  day-15.rs  day-18.rs  day-19.rs  day-20.rs  day-21.rs  day-22.rs  day-4.rs  day-5.rs  day-6.rs  day-7.rs  day-8.rs  mod.rs
tests/: it_works.rs
