[package]
name = "cch23-thewondersmith"
version = "0.1.0"
edition = "2021"

[dependencies]

url = "^2"
http = "^1.0"
anyhow = "^1"
axum = "^0.6"
visible = "*"
futures = "^0.3"
tracing = "^0.1"
thiserror = "^1"
serde_json = "^1"
hashbrown = "^0.14"
itertools = "^0.12"
num-traits = "^0.2"
shuttle-axum = "^0.35"
shuttle-runtime = "^0.35"
unicode-normalization = "*"
b64 = { package = "base64", version = "*" }
num = { version = "^0.4", features = ["serde"] }
tokio = { version = "^1.34", features = ["full"] }
serde = { version = "*", default-features = false, features = ["std", "derive"] }
reqwest = { version = "^0.11", default-features = false, features = ["json", "rustls-tls"] }


[dev-dependencies]

rand = "^0.8"
tower = "^0.4"
regex = "^1.10"
rstest = "^0.18"
once_cell = "^1.19"
tokio-test = "^0.4"
env_logger = "^0.10"
http-body-util = "*"
tracing-subscriber = "*"
pretty_assertions = "^1.3"
test-log = { version = "^0.2", features = ["trace"] }


[features]

ci = []
default = []
