[package]
name = "cch23-thewondersmith"
version = "0.1.0"
edition = "2021"

[dependencies]

url = "^2"
http = "^1.0"
anyhow = "^1"
visible = "*"
futures = "^0.3"
tracing = "^0.1"
thiserror = "^1"
serde_json = "^1"
hashbrown = "^0.14"
itertools = "^0.12"
num-traits = "^0.2"
futures-util = "^0.3"
shuttle-axum = "^0.35"
shuttle-runtime = "^0.35"
unicode-normalization = "*"
b64 = { package = "base64", version = "*" }
image-rs = { package = "image", version = "^0.24" }
num = { version = "^0.4", features = ["serde"] }
tokio = { version = "^1.34", features = ["full"] }
tower = { version = "^0.4", features = ["util", "tracing"] }
tower-http = { version = "^0.4", features = ["fs", "trace"] }
serde = { version = "*", default-features = false, features = ["std", "derive"] }
reqwest = { version = "^0.11", default-features = false, features = ["json", "rustls-tls"] }
axum = { version = "^0.6", features = ["http2", "macros", "headers", "tracing", "multipart"] }


[dev-dependencies]

rand = "^0.8"
regex = "^1.10"
rstest = "^0.18"
once_cell = "^1.19"
tokio-test = "^0.4"
env_logger = "^0.10"
http-body-util = "*"
tracing-subscriber = "*"
pretty_assertions = "^1.3"
test-log = { version = "^0.2", features = ["trace"] }


[features]

ci = []
default = []
