[package]
name = "cch23-thewondersmith"
version = "0.1.0"
edition = "2021"

[dependencies]

url = "^2"
tar = "^0.4"
anyhow = "^1"
http = "^1.0"
mime = "^0.3"
visible = "*"
bytes = "^1.5"
regex = "^1.10"
sha256 = "^1.4"
futures = "^0.3"
thiserror = "^1"
tracing = "^0.1"
serde_json = "^1"
tempfile = "^3.8"
hashbrown = "^0.14"
itertools = "^0.12"
num-traits = "^0.2"
once_cell = "^1.19"
derive_more = "^0.99"
futures-util = "^0.3"
shuttle-axum = "^0.35"
shuttle-common = "^0.35"
shuttle-persist = "^0.35"
shuttle-runtime = "^0.35"
shuttle-secrets = "^0.35"
shuttle-service = "^0.35"
unicode-normalization = "*"
b64 = { package = "base64", version = "*" }
image-rs = { package = "image", version = "^0.24" }
tower = { version = "^0.4", features = ["util", "tracing"] }
tokio = { version = "^1.34", features = ["full", "tracing"] }
tower-http = { version = "^0.4", features = ["fs", "trace"] }
axum-template = { version = "^2.0", features = ["handlebars"] }
ulid = { version = "^1.1", features = ["std", "serde", "uuid"] }
serde = { version = "*", default-features = false, features = ["std", "derive"] }
git2 = { version = "^0.18", default-features = false, features = ["vendored-libgit2"] }
reqwest = { version = "^0.11", default-features = false, features = ["json", "rustls-tls"] }
shuttle-shared-db = { version = "^0.35", features = ["postgres", "postgres-rustls", "sqlx"] }
chrono = { version = "^0.4", features = ["std", "clock", "serde", "alloc", "pure-rust-locales"] }
axum = { version = "^0.6", features = ["ws", "http2", "macros", "headers", "tracing", "multipart"] }
handlebars = { version = "^4.3", default-features = false, features = ["dir_source", "string_helpers"]}
uuid = { version = "^1.6", features = ["std", "v1", "v3", "v4", "v5", "v6", "v7", "rng", "fast-rng", "serde", "zerocopy"] }
sqlx = { version = "^0.7", features = [ "json", "uuid", "chrono", "macros", "sqlite", "postgres", "tls-rustls", "runtime-tokio" ] }


[dev-dependencies]

rand = "^0.8"
rstest = "^0.18"
once_cell = "^1.19"
tokio-test = "^0.4"
env_logger = "^0.10"
http-body-util = "*"
tracing-subscriber = "*"
pretty_assertions = "^1.3"
test-log = { version = "^0.2", features = ["trace"] }


[features]

ci = []
default = []
